# Chess_2D

./: CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
assets/Maps/: Chessboard.tmx
src/: Chess.cpp
src/Core/: Application.cpp  Application.h  Assert.h  Chess.cpp  InputEventManager.cpp  InputEventManager.h  Log.cpp  Log.h  Map.cpp  Map.h  Renderer.cpp  Renderer.h  TextureImporter.cpp  TextureImporter.h  Textures.cpp  Textures.h  Window.cpp  Window.h
src/Scene/: Scene.cpp  Scene.h
src/Utils/: Vector2D.cpp  Vector2D.h
